--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: http://sceenju.github.io
 baseurl:
 # Site settings
-title: 袁增伟教授课题组
+title: NJU | 袁增伟教授课题组
 email: #
 description: "欢迎来到袁增伟教授课题组，我们专注于物质循环及其资源环境效益研究。"
 
